# tululu-parser

./: .gitignore  README.md  parse_tululu_category.py  pyproject.toml  render_website.py  template.html
pages/: index1.html  index2.html  index3.html  index4.html  index5.html  index6.html  index7.html
parsed/: books_data.json
static/: styles.css
