[tool.poetry]
name = "tululu-parser"
version = "0.1.0"
description = ""
authors = ["Andrey Kustov"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
beautifulsoup4 = "^4.11.1"
lxml = "^4.9.1"
pathvalidate = "^2.5.2"
retry = "^0.9.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
